--- a/_posts/0000-01-02-plstudio.md
+++ b/_posts/0000-01-02-plstudio.md
@@ -1,6 +1,6 @@
 ---
 layout: slide
-title: "Welcome to our second slide!"
+title: "Welcome to our phil's slide!"
 ---
 This is Phil's slide
 Use the left arrow to go back!
